syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message AbilityEmbryo {
	uint32 ability_id = 1;
	uint32 ability_name_hash = 2;
	uint32 ability_override_name_hash = 3;
}
