syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

enum ChangeEnergyReason {
	CHANGE_ENERGY_REASON_NONE = 0;
	CHANGE_ENERGY_REASON_SKILL_START = 1;
}
